// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number Filter with single instance with multiple attributes renders correctly 1`] = `
<DocumentFragment>
  <div
    class="filter-container filter-custom-class"
    data-focusindex="0"
  >
    <div
      class="filter-selector"
    >
      <div
        class="filter-selector-content"
      >
        <button
<<<<<<< HEAD
          aria-activedescendant=""
          aria-controls="downshift-:r7:-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Equal"
          class="btn btn-default filter-selector-button button-icon equal"
          id="downshift-:r7:-toggle-button"
          role="combobox"
          tabindex="0"
        >
           
        </button>
        <ul
          aria-label="Select filter type"
          class="filter-selectors hidden"
          id="downshift-:r7:-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
        />
=======
          aria-controls="NumberFilter1-filter-selectors"
          aria-expanded="false"
          aria-haspopup="true"
          class="btn btn-default filter-selector-button button-icon equal"
        >
           
        </button>
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
      </div>
    </div>
    <input
      class="form-control filter-input"
      type="number"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Number Filter with single instance with no context renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
<<<<<<< HEAD
    The filter widget must be placed inside the column or header of the Data grid 2.0 or inside header of the Gallery widget.
=======
    The Number filter widget must be placed inside the header of the Data grid 2.0 or Gallery widget.
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
  </div>
</DocumentFragment>
`;

exports[`Number Filter with single instance with single attribute renders correctly 1`] = `
<DocumentFragment>
  <div
    class="filter-container filter-custom-class"
    data-focusindex="0"
  >
    <div
      class="filter-selector"
    >
      <div
        class="filter-selector-content"
      >
        <button
<<<<<<< HEAD
          aria-activedescendant=""
          aria-controls="downshift-:r0:-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Equal"
          class="btn btn-default filter-selector-button button-icon equal"
          id="downshift-:r0:-toggle-button"
          role="combobox"
          tabindex="0"
        >
           
        </button>
        <ul
          aria-label="Select filter type"
          class="filter-selectors hidden"
          id="downshift-:r0:-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px);"
        />
=======
          aria-controls="NumberFilter1-filter-selectors"
          aria-expanded="false"
          aria-haspopup="true"
          class="btn btn-default filter-selector-button button-icon equal"
        >
           
        </button>
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
      </div>
    </div>
    <input
      class="form-control filter-input"
      type="number"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Number Filter with single instance with wrong attribute's type renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
<<<<<<< HEAD
    Unable to get filter store. Check parent widget configuration.
=======
    The attribute type being used for Number filter is not 'Autonumber, Decimal, Integer or Long'
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
  </div>
</DocumentFragment>
`;

exports[`Number Filter with single instance with wrong multiple attributes' types renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
<<<<<<< HEAD
    Unable to get filter store. Check parent widget configuration.
=======
    The Number filter widget can't be used with the filters options you have selected. It requires a "Autonumber, Decimal, Integer or Long" attribute to be selected.
>>>>>>> daa3fce04 (Add DE localization to rich-text-web)
  </div>
</DocumentFragment>
`;
